--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
   },
   "homepage": "https://github.com/justmoon/unhash-upload#readme",
   "dependencies": {
+    "ilp-plugin-xrp-escrow": "^1.0.1",
+    "moment": "^2.18.1",
     "mz": "^2.6.0",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "streamifier": "^0.1.1",
+    "superagent": "^3.5.2",
+    "uuid": "^3.1.0"
   }
 }
