--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-fetch": "^1.6.3",
     "streamifier": "^0.1.1",
     "superagent": "^3.5.2",
+    "superagent-ilp": "0.0.1",
     "uuid": "^3.1.0"
   }
 }
